@@ -75,6 +75,7 @@
     "maxlength",
     "maxlevel",
     "maxnum",
+    "metatables",
     "metatostring",
     "mkdir",
     "newtable",
